--- a/HTML-CSS-Study/HTML-CSS-I/stylesheet.css
+++ b/HTML-CSS-Study/HTML-CSS-I/stylesheet.css
@@ -3,8 +3,21 @@ body {
 }
 
 .header {
-    background-color: #f7f2b4;
+    background-color: #26d0c9;
+    color: #fff;
     height: 90px;
+}
+
+.header-logo {
+    float: left;
+    font-size: 36px;
+    padding: 20px 40px;
+}
+
+li {
+    list-style: none;
+    float: left;
+    padding: 33px 20px;
 }
 
 .main {
