--- a/HTML-CSS-Study/HTML-CSS-I/stylesheet.css
+++ b/HTML-CSS-Study/HTML-CSS-I/stylesheet.css
@@ -2,6 +2,10 @@ body {
     font-family: "Avenir Next";
 }
 
+li {
+    list-style: none;
+}
+
 .header {
     background-color: #26d0c9;
     color: #fff;
@@ -14,8 +18,7 @@ body {
     padding: 20px 40px;
 }
 
-li {
-    list-style: none;
+.header-list li {
     float: left;
     padding: 33px 20px;
 }
@@ -26,6 +29,21 @@ li {
 }
 
 .footer {
-    background-color: #ceccf3;
-    height: 270px;
+    background-color: #2f5167;
+    color: #fff;
+    height: 120px;
+    padding: 40px 40px;
+}
+
+.footer-logo {
+    font-size: 32px;
+    float: left;
+}
+
+.footer-list {
+    float: right;
+}
+
+.footer-list li {
+    padding-bottom: 20px;
 }
